--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,5 @@ STRIPE_SECRET_KEY=sk_test_51KRhQ8AChlmCk9hovRgNmpUmvcB9ykkZeY35Ka77anRhdwgGCrRnb
 CLIENT_URL=http://localhost:3000
 PORT=8000
 JWT_SECRET=SECRET
+STRIPE_SUCCESS_URL=http://localhost:3000/stripe/success
+STRIPE_CANCEL_URL=http://localhost:3000/stripe/cancel
